@@ -1,3 +1,12 @@
+2008-06-01  Neal H. Walfield  <neal@gnu.org>
+
+	* storage.c (storage_low_mutex_init_once): Don't declare.
+	(storage_low_mutex_init): Remove function.
+	(storage_low_mutex): Define to
+	PTHREAD_MUTEX_RECURSIVE_INITIALIZER_NP.
+	(storage_check_reserve_internal): Remove call to
+	storage_low_mutex_init_once.
+
 2008-05-31  Neal H. Walfield  <neal@gnu.org>
 
 	* storage.h (storage_check_reserve): Take additional parameter
